static/css/styles.css
/* ... */
.search-box-input {
  width: 100% !important;
}

#search-hits .search-hits-empty {
  margin: 15px;
  color: #f15a24;
}

#search-hits .search-hits-row {
  margin: 15px;
  padding-bottom: 15px;
  border-bottom: 1px solid #ccc;
}

#search-hits .search-hits-section {
  font-size: 0.8em;
}

#search-hits .search-hits-section a {
  text-decoration: none;
  color: #f15a24;
}

#search-hits .search-hits-page a {
  color: #666;
}

#search-hits .search-hits-page em {
  color: #f15a24;
}

#search-hits .search-hits-matches a {
  font-size: 0.8em;
  font-weight: normal;
  color: #999;
  text-decoration: none;
}

#search-hits .search-hits-matches em {
  color: #f15a24;
}

.ais-search-box-holding {
    display: inline-block;
    position: relative;
    height: 46px;
    white-space: nowrap;
    font-size: 14px;
}

.ais-search-box--input-holding {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    font: inherit;
    background: #fff;
    display: inline-block;
    border: 1px solid #d4d8e3;
    border-radius: 4px;
    box-shadow: 0 1px 1px 0 rgba(85,95,110,.2);
    transition: box-shadow .4s ease,background .4s ease;
    padding: 10px 10px 10px 35px;
    vertical-align: middle;
    white-space: normal;
    height: 46px;
    width: 100%;
}


/*

  content

*/


#page-content {
  width: 100% !important;
}

/*

  scrollspy

*/

#scrollspy-container {
  min-width: 330px;
  max-width: 330px;
  height: calc(100% - 113px);
  max-height: calc(100% - 113px);
  position: fixed;
  overflow-y: auto;
  top: 113px;
  right: 0px;
}

@media screen and (max-width: 1025px) {
  #scrollspy-container {
    display: none;
  }
}

#scrollspy-container nav {
  padding-right: 20px;
  padding-top: 20px;
  padding-bottom: 30px;
}

#scrollspy-container ul {


}

.scrollspy-item {
  margin-bottom: 6px;
}

.scrollspy-item, .scrollspy-item a  {
  color: #999;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  font-weight: 400 !important;
  font-family: Roboto, Helvetica, sans-serif !important;
}

.scrollspy-item.active, .scrollspy-item.active a  {
  color: #f15a24;
  font-weight: 600 !important;
}

.scrollspy-H2 a {
  font-size: 12pt !important;
  text-decoration: none;
}

.scrollspy-H3 {
  margin-left: 20px;
}

.scrollspy-H3 a {
  font-size: 10pt !important;
  text-decoration: none;
}

.scrollspy-H4 {
  margin-left: 20px;
}

.scrollspy-H4 a {
  font-size: 10pt !important;
  text-decoration: none;
}

h2,h3,h4,h5,h6 a {
  text-decoration: none;
}



/*

  copy paste

*/

.mdl-tooltip {
  font-size: 10px;
}

.highlight { position:relative;margin-top: 50px;}

.highlight .copy-link-old {
  margin-left: 10px;
  cursor: pointer;
  background-color: #fff;
  border: 1px solid #f15a24;
  color: #f15a24;
  padding: 3px;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 8pt;
  float: right;
}

.highlight.copyable:hover .copy-link {
  display:block;
}
.highlight .copy-link-old.active {
  background-color: #f15a24;
  color: #fff;
}

.highlight .copy-link .button {
  color: #fff;
  background-image: linear-gradient(to right,#f1732f,#d74f26);
  border-radius: 3px;
  background-color: #f1732f;
  border-color: #f1732f;
  padding: 5px 5px;
  cursor:pointer;
  transition: all 1.5s;
}
.highlight .copy-link .button, .highlight .copy-link .button i
{
  vertical-align: text-bottom;
}

.highlight .copy-link.active {
  display:block !important;
}

.highlight .copy-link .button.active {
  background: #d74f26;
  color:#000;
}


.highlight .copy-link {
  display:none;
  margin-left: 10px;
    cursor: pointer;
  /* padding: 3px; */
  /* padding-left: 8px; */
  /* padding-right: 8px; */
  font-size: 8pt;
  /* float: right; */
  position: absolute;
  right: 0px;
    top: -16px;
  /* box-shadow: 6px 6px 7px 2px #ccc; */
}


.highlight.typeOutput
{
    margin-top: -18px;
}
.highlight.typeOutput pre {
    background-color: #f5f4f4;
}

.highlight .copyable pre {
  background-color: #e2dede;
}

.docs-content pre {
    padding: 15px;

    background-color: #efefef;
    /* font-family: sans-serif; */
    border: 1px solid #d2d2d2;
    overflow: auto;

    -webkit-box-shadow: 6px 6px 7px 2px #f7f3f3;
    -moz-box-shadow: 6px 6px 7px 2px #f7f3f3;
    box-shadow: 6px 6px 7px 2px #f7f3f3;
}

.prev-next-title {
  font-size: 10pt;
  color: #666;
}

.docs-content pre code {
  display:inline-block;
  line-height: 20px;
  font-size: 0.8em;
}

@media screen and (max-width: 1025px) {
  .docs-content pre {
    padding: 5px;
  }

  .docs-content pre code {
    display:inline-block;
    line-height: 14px;
    font-size: 0.6em;
  }
}



/*

  menu-children

*/

.sidemenu-arrow-link {
  display: inline-block;
}

.menu-children {
  -webkit-transition:all 0.5s ease;
  -moz-transition:all 0.6s ease;
  height:0px;
  opacity:0;
  overflow: hidden;
}

.menu-children.open {
  overflow:visible;
  opacity:1;
  height: auto;
}


/*

  images

*/

.docs-content img {
  max-width: 100% !important;
}


/*

  logo list

*/

.logo-list-container {
  text-align: center;
  position: relative;
}

.logo-list-container a {
  -webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
  display: inline-block;
  background-color: #f5f5f5;
  padding: 2em;
  width: 28%;
  margin: .5em;
  border: 1px solid #ccc;
  text-align: center;
  max-width: 235px;
}

@media screen and (max-width: 480px) {
  .logo-list-container a {
    width: 45%;
  }
}

.logo-list-container a:hover {
  background: #f0f0f0;
}

.logo-list-image img {
  width: 100%;
  height: auto;
}

.logo-list-title {
  text-align: center;
  padding-top: 30px;
  font-size: 1.6em;
}

/*

  homelist

*/

.list-series {
  display: grid;
  list-style: none;
  grid-column-gap: 2%;
  grid-template-columns: repeat(3, minmax(30%, 1fr));
  grid-row-gap: 22px;
  width: 100%;
  padding: 30px 0;
}

@media screen and (max-width: 1299px) {
  .list-series {
    grid-template-columns: repeat(2, minmax(48%, 1fr));
  }
}
/* ... */

